# dbrx-ml-next-best-action

./: .gitignore  CLAUDE.md  README.md  databricks.yml  model_comparison.json  next-best-action-e2e-single-notebook.ipynb  pyproject.toml  requirements.txt  sync_requirements.sh
.claude/commands/: _mlflow_utils.py  compare-models.md  compare-models.py  promote-model.md  promote-model.py  validate-bundle.md  validate-bundle.py
notebooks/: 01_data_generation.py  02_feature_engineering.py  03_model_training.py  04_batch_inference.py  05_monitoring.py
src/nba_model/: config.py
src/nba_model/data/: generator.py
src/nba_model/features/: engineering.py
src/nba_model/inference/: batch_inference.py
src/nba_model/monitoring/: drift_detection.py  lakehouse_monitor.py  lakehouse_monitor_sql.py
src/nba_model/training/: trainer.py
